# distributed-systems

./: .gitignore  CMakeLists.txt
lab1/: Token.cpp  TokenInStream.cpp  TokenOutStream.h  app.cpp
lab1/client/: Client.cpp  Client.h  ThreadSafeDeque.h  ThreadSafeQueue.h
lab1/client/tcp/: ClientTCP.cpp  ClientTCP.h
lab1/client/udp/: ClientUDP.cpp  ClientUDP.h
lab1/listener/: listener.py
lab1/system/: Message.h  TokenMessageProcessor.cpp  TokenMessageProcessor.h  TokenRingSystem.cpp  TokenRingSystem.h  TokenRingUtility.cpp  TokenRingUtility.h
lab1/token/: Token.cpp  Token.h  TokenInStream.h
lib/client/udp/: ClientUDP.cpp
lib/system/: TokenMessageProcessor.cpp  TokenRingSystem.cpp  TokenRingSystem.h
lib/token/: Token.h  TokenOutStream.cpp
test/: app.cpp
